# rag

./: CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
data/text_files/: python_intro.txt
data/vector_store/: chroma.sqlite3
docs/superpowers/plans/: 2026-04-21-gemma-rag-integration.md
notebook/: document.ipynb
